Seguridad con usuarios autentificados y admin en los controllers

--- a/Frontend/components/login.html
+++ b/Frontend/components/login.html
@@ -30,7 +30,7 @@
                         </form>
                     </div>
                     <div class="card-footer text-muted text-center small">
-                        ¿No tienes una cuenta? <a href="register.html">Regístrate</a>
+                        ¿No tienes una cuenta? <a href="../components/register.html">Regístrate</a>
                     </div>
                 </div>
             </div>
@@ -39,6 +39,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="login.js"></script>
+    <script src="../js/api/login.js"></script>
 </body>
 </html>
