--- a/Frontend/components/register.html
+++ b/Frontend/components/register.html
@@ -50,7 +50,7 @@
                             </div>
 
                             <div class="text-center small">
-                                ¿Ya tienes una cuenta? <a href="login.html" class="text-decoration-none">Inicia
+                                ¿Ya tienes una cuenta? <a href="../components/login.html" class="text-decoration-none">Inicia
                                     sesión</a>
                             </div>
                         </form>
@@ -59,9 +59,10 @@
             </div>
         </div>
     </div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="register.js"></script>
+    <script src="../js/api/register.js"></script>
 </body>
 
 </html>
