--- a/Frontend/components/login.html
+++ b/Frontend/components/login.html
@@ -26,10 +26,10 @@
                     <div class="card-body">
                         <form id="loginForm">
                             <div class="mb-3">
-                                <label for="email" class="form-label">Email</label>
+                                <label for="email" class="form-label">Usuario</label>
                                 <div class="input-group">
                                     <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                                    <input type="email" class="form-control" id="email" placeholder="ejemplo@email.com"
+                                    <input type="text" class="form-control" id="username" placeholder="Nombre de usuario"
                                         required>
                                 </div>
                             </div>
