--- a/Frontend/css/Video.css
+++ b/Frontend/css/Video.css
@@ -1,21 +1,20 @@
 main {
-    /* background: linear-gradient(15deg, #142850, #14365f, #13476f, #125d80, #107792, #0d96a5, #09b8b4, #04ccb1); */
-    background-color: #85c1e9;
-    font-family: "Poppins", sans-serif;
+    background-color: #f8f9fa;
+    font-family: "JetBrains Mono", monospace;
     display: flex;
     gap: 20px;
+    zoom: 90%;
 }
 
 video {
     width: 100%;
     border-radius: 10px;
+    filter: brightness(0.9);
 }
 
 .controls {
-    background-color: transparent;
+    background-color: #a5b3aa;
     padding: 10px 15px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -23,22 +22,33 @@ video {
 }
 
 .controls button {
-    color: white;
+    color: #fefeeb;
+    background-color: #0ca5b0;
+    border: none;
+    padding: 8px 12px;
+    font-weight: bold;
+    transition: background 0.3s;
+}
+
+.controls button:hover {
+    background-color: #107a84;
 }
 
 .progress {
     flex-grow: 1;
     margin: 0 10px;
+    background-color: #f8f4e4;
+    border-radius: 4px;
 }
 
 input[type="range"]::-webkit-slider-thumb {
-    background-color: #0d6efd;
+    background-color: #0ca5b0;
 }
 
 .time {
     min-width: 40px;
     text-align: left;
-    color: white;
+    color: #6c63ff
 }
 
 video::-webkit-media-controls {
@@ -47,6 +57,7 @@ video::-webkit-media-controls {
 
 .video-section {
     height: 100vh;
+    position: relative;
     width: 70%;
 }
 
@@ -56,22 +67,167 @@ video::-webkit-media-controls {
 
 .accordion-button:focus {
     box-shadow: none;
-    border-color: #4169E1;
+    border-color: #0ca5b0;
 }
 
 .accordion-button:not(.collapsed) {
-    color: #4169E1;
-    background-color: #f0f4ff;
+    color: #6c63ff;
+    background-color: #a5b3aa;
 }
 
 .accordion-body {
-    background-color: #f8f9fa;
-    border-left: 3px solid #4169E1;
+    background-color: #f8f4e4;
+    border-left: 3px solid #6c63ff;
+    color: #064c51;
 }
 
+.popup-finish-video {
+    width: 50%;
+    position: absolute;
+}
+
+.not-full-screen {
+    height: 60vh;
+}
+
+.custom-nav-btn {
+    background: linear-gradient(135deg, #0ca5b0, #107a84);
+    color: #fefeeb;
+    border: none;
+    padding: 0.8rem 1.6rem;
+    font-size: 1.1rem;
+    font-weight: 600;
+    border-radius: 12px;
+    box-shadow: 0 6px 12px rgba(12, 165, 176, 0.4);
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    transition: all 0.3s ease;
+}
+
+.custom-nav-btn:hover {
+    background: linear-gradient(135deg, #0ca5b0, #0b8e99);
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(12, 165, 176, 0.5);
+}
+
+.custom-nav-btn:active {
+    transform: scale(0.97);
+}
+
+.custom-nav-btn:disabled {
+    background: gray;
+    cursor: not-allowed;
+    opacity: 0.5;
+}
+
+.h2-module-course {
+    font-family: "JetBrains Mono", monospace;
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    color: #554dfa;
+    background-color: #a5b3aa;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(12, 165, 176, 0.4);
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.accordion {
+    background-color: #f8f9fa;
+    border: 1px solid #0ca5b0;
+    border-radius: 8px;
+    padding: 8px;
+    margin-top: 40px;
+}
+
+.accordion-item {
+    background-color: #a5b3aa;
+    border: none;
+    border-radius: 6px;
+    margin-bottom: 6px;
+    transition: all 0.3s ease-in-out;
+}
+
+.accordion-item:hover {
+    background-color: #b7c2bb;
+}
+
+.accordion-header {
+    font-family: "JetBrains Mono", monospace;
+    font-size: 1rem;
+    color: #0ca5b0;
+    padding: 8px;
+}
+
+.accordion-button {
+    background-color: transparent;
+    color: #0ca5b0;
+    font-size: 0.9rem;
+    font-weight: normal;
+    border: none;
+    padding: 10px;
+    transition: all 0.2s ease-in-out;
+}
+
+.accordion-button:hover {
+    background-color: #cdd6cf;
+}
+
+.accordion-body {
+    background-color: #f8f4e4;
+    color: #4e3f30;
+    font-family: "JetBrains Mono", monospace;
+    padding: 12px;
+    border-left: 2px solid #0ca5b0;
+}
+
+.btn-add-video {
+    background: linear-gradient(135deg, #0ca5b0, #107a84);
+    color: #fefeeb;
+    border: 2px solid #0ca5b0;
+    font-family: "JetBrains Mono", monospace;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 10px 16px;
+    border-radius: 8px;
+    box-shadow: 0 4px 4px rgba(12, 165, 176, 0.4);
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.btn-add-video:hover {
+    background: linear-gradient(135deg, #0ca5b0, #0b8e99);
+    transform: scale(1.05);
+    box-shadow: 0 6px 12px rgba(12, 165, 176, 0.6);
+}
+
+.btn-add-video:active {
+    transform: scale(0.97);
+}
+
+.btn-add-video:disabled {
+    background: gray;
+    cursor: not-allowed;
+    opacity: 0.5;
+}
+
+.sortable-ghost {
+    opacity: 0.5;
+    background-color: #f8f4e4;
+}
+
+#videoTitle {
+    color: #6c63ff;
+}
+
+#video-created-at {
+    color: #6c63ff;
+}
 
 @media (max-width: 792px) {
-    
     main {
         flex-direction: column;
     }
@@ -79,7 +235,7 @@ video::-webkit-media-controls {
     .video-section {
         width: 100%;
         height: 60vh;
-        background-color: beige;
+        background-color: #a5b3aa;
     }
 
     video {
