--- a/Frontend/css/course.css
+++ b/Frontend/css/course.css
@@ -1,49 +1,43 @@
 
-.accordion {
-    background-color: #f8f9fa;
-    border: 1px solid #0ca5b0;
-    border-radius: 8px;
-    padding: 8px;
-    margin-top: 40px;
+/* Estilos del modal */
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(108, 108, 108, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.accordion-item {
-    background-color: #a5b3aa;
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    width: 30%;
+}
+
+#confirmDelete {
+    background-color: #0ca5b0;
+    color: white;
     border: none;
-    border-radius: 6px;
-    margin-bottom: 6px;
-    transition: all 0.3s ease-in-out;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 5px;
 }
 
-.accordion-item:hover {
-    background-color: #b7c2bb;
-}
-
-.accordion-header {
-    font-family: "JetBrains Mono", monospace;
-    font-size: 1rem;
-    color: #0ca5b0;
-    padding: 8px;
-}
-
-.accordion-button {
-    background-color: transparent;
-    color: #0ca5b0;
-    font-size: 0.9rem;
-    font-weight: normal;
+#cancelDelete {
+    background-color: #aeafaf;
+    color: white;
     border: none;
-    padding: 10px;
-    transition: all 0.2s ease-in-out;
-}
-
-.accordion-button:hover {
-    background-color: #cdd6cf;
-}
-
-.accordion-body {
-    background-color: #f8f4e4;
-    color: #4e3f30;
-    font-family: "JetBrains Mono", monospace;
-    padding: 12px;
-    border-left: 2px solid #0ca5b0;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 5px;
 }
