--- a/Frontend/components/uploadVideo.html
+++ b/Frontend/components/uploadVideo.html
@@ -1,4 +1,6 @@
 <style>
+
+
   .centered-box {
     position: fixed;
     top: 50%;
@@ -13,7 +15,7 @@
     align-items: center;
     padding-top: 2rem;
     border-radius: 15px;
-    background-color: #f8f9fa;
+    background-color: #d8d8d8;
     /* border: 2px solid #0fd26b;
     box-shadow: 0 6px 18px rgba(15, 210, 107, 0.4); */
     color: #6c63ff;
